Refactor: Update `NovaHomeBadger` to use `List.of` instead of `Arrays.asList`.